@@ -105,4 +105,7 @@ int fill_vg_create_params(struct cmd_context *cmd,
 
 int lv_refresh(struct cmd_context *cmd, struct logical_volume *lv);
 int vg_refresh_visible(struct cmd_context *cmd, struct volume_group *vg);
+void lv_spawn_background_polling(struct cmd_context *cmd,
+				 struct logical_volume *lv);
+
 #endif
